manifest/objects/Apttus__WizardRuntimeInput__c.object
<CustomObject>
    <description>Input Control instance within a runtime wizard</description>
    <fields>
        <fullName>Apttus__Comments__c</fullName>
        <description>Holds comments entered for this input</description>
        <inlineHelpText>Holds comments entered for this input</inlineHelpText>
        <label>Comments</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus__Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the input control is enabled</description>
        <inlineHelpText>Indicates whether the input control is enabled</inlineHelpText>
        <label>Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus__InputRepeatSequence__c</fullName>
        <description>Repeat sequence of the input when the inputs are grouped within a step, otherwise 0</description>
        <inlineHelpText>Repeat sequence of the input when the inputs are grouped within a step, otherwise 0</inlineHelpText>
        <label>Input Repeat Sequence</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus__ResponseValue__c</fullName>
        <description>User response for this input</description>
        <inlineHelpText>User response for this input</inlineHelpText>
        <label>Response Value</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus__Sequence__c</fullName>
        <description>Indicates the sequence of the input</description>
        <inlineHelpText>Indicates the sequence of the input</inlineHelpText>
        <label>Sequence</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus__Shown__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the input control is shown</description>
        <inlineHelpText>Indicates whether the input control is shown</inlineHelpText>
        <label>Shown</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus__WizardId__c</fullName>
        <description>Master-detail to the wizard instance</description>
        <inlineHelpText>Master-detail to the wizard instance</inlineHelpText>
        <label>Wizard</label>
        <referenceTo>Apttus__Wizard2__c</referenceTo>
        <relationshipLabel>Runtime Inputs</relationshipLabel>
        <relationshipName>RuntimeInputs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Apttus__WizardInputControlId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the wizard input control design element</description>
        <inlineHelpText>Lookup to the wizard input control design element</inlineHelpText>
        <label>Wizard Input Control</label>
        <referenceTo>Apttus__WizardInputControl2__c</referenceTo>
        <relationshipLabel>Runtime Inputs</relationshipLabel>
        <relationshipName>RuntimeInputs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus__WizardStepId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the wizard step design element</description>
        <inlineHelpText>Lookup to the wizard step design element</inlineHelpText>
        <label>Wizard Step</label>
        <referenceTo>Apttus__WizardStep2__c</referenceTo>
        <relationshipLabel>Runtime Inputs</relationshipLabel>
        <relationshipName>RuntimeInputs</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Wizard Runtime Input</label>
    <nameField>
        <label>Input Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Wizard Runtime Inputs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>